--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,35 +1,46 @@
 {
-    "parserOptions": {
-      "ecmaVersion": 2021,
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "sourceType": "module"
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "ecmaFeatures": {
+      "jsx": true
     },
-  
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    },
-  
-    "plugins": [
-      "react",
-      "react-hooks"
-    ],
-  
-    "rules": {
-      "react/jsx-no-bind": ["error", {
-        "allowArrowFunctions": true,
-        "allowBind": false,
-        "ignoreRefs": true
-      }],
-      "react/no-did-update-set-state": "error",
-      "react/no-unknown-property": "error",
-      "react/no-unused-prop-types": "error",
-      "react/prop-types": "error",
-      "react/react-in-jsx-scope": "error",
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn"
+    "sourceType": "module"
+  },
+
+  "env": {
+    "browser": true,
+    "node": true
+  },
+
+  "settings": {
+    "react": {
+      "version": "detect"
     }
-  }
+  },
+
+  "plugins": [
+    "react",
+    "react-hooks"
+  ],
+
+  "rules": {
+    "react/jsx-no-bind": ["error", {
+      "allowArrowFunctions": true,
+      "allowBind": false,
+      "ignoreRefs": true
+    }],
+    "react/no-did-update-set-state": "error",
+    "react/no-unknown-property": "error",
+    "react/no-unused-prop-types": "error",
+    "react/prop-types": "error",
+    "react/react-in-jsx-scope": "error",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
+  },
+
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ]
+}
